// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropDown Rendering disabled DropDown renders according to design 1`] = `
<div
  className="sc-bdVaJa lhrPED"
>
  <label
    className="sc-bwzfXH ebnOHd"
    htmlFor="Ativo"
  >
    Ativo:
  </label>
  <label
    className="sc-htpNat jMFgIO"
    id="AtivoValue"
    name="AtivoValue"
  >
    
  </label>
</div>
`;

exports[`DropDown Rendering enabled DropDown renders according to design 1`] = `
<div
  className="sc-bdVaJa lhrPED"
>
  <label
    className="sc-bwzfXH ebnOHd"
    htmlFor="Ativo"
  >
    Ativo:
  </label>
  <select
    className="sc-bxivhb ldZUon"
    id="Ativo"
    name="Ativo"
    onChange={[Function]}
  >
    <option
      value="WINM20"
    >
      WINM20
    </option>
    <option
      value="WDOM20"
    >
      WDOM20
    </option>
  </select>
</div>
`;

exports[`DropDown Rendering enabled DropDown with options as objects renders according to design 1`] = `
<div
  className="sc-bdVaJa lhrPED"
>
  <label
    className="sc-bwzfXH ebnOHd"
    htmlFor="Sistema"
  >
    Sistema:
  </label>
  <select
    className="sc-bxivhb ldZUon"
    id="Sistema"
    name="Sistema"
    onChange={[Function]}
  >
    <option
      value={1}
    >
      system 1
    </option>
    <option
      value={2}
    >
      system 2
    </option>
  </select>
</div>
`;
